[package]
edition = "2021"
name = "wave"
version = "0.1.0"

author = "Maximous Black <maximousblk@gmail.com>"
description = "Vanity Arweave Wallet Generator"
readme = "README.md"
repository = "https://github.com/maximousblk/wave.rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = "1.4.13"
clap = {version = "3.2.8", features = ["derive"]}
rand = "0.8.5"
regex = "1.6.0"
rsa = "0.6.1"
serde = {version = "1.0.138", features = ["derive"]}
serde_json = "1.0.82"
sha2 = "0.10.2"
